@@ -9,8 +9,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>659</width>
-            <height>552</height>
+            <width>523</width>
+            <height>562</height>
         </rect>
     </property>
     <property name="sizePolicy">
@@ -177,7 +177,7 @@
                     </column>
                     <column>
                         <property name="text">
-                            <string>Speech Syntheziser</string>
+                            <string>Speech Synthesizer</string>
                         </property>
                         <property name="clickable">
                             <bool>true</bool>
@@ -277,7 +277,7 @@
             </property>
             <property name="sizePolicy">
                 <sizepolicy>
-                    <hsizetype>3</hsizetype>
+                    <hsizetype>7</hsizetype>
                     <vsizetype>3</vsizetype>
                     <horstretch>0</horstretch>
                     <verstretch>0</verstretch>
@@ -285,7 +285,7 @@
             </property>
             <property name="minimumSize">
                 <size>
-                    <width>640</width>
+                    <width>0</width>
                     <height>356</height>
                 </size>
             </property>
@@ -660,6 +660,8 @@
         </widget>
     </grid>
 </widget>
+<customwidgets>
+</customwidgets>
 <connections>
     <connection>
         <sender>addLanguageButton</sender>
